Fix Side Panel Cut off

--- a/app/assets/stylesheets/redesign/pages/pdp/_pdp.scss
+++ b/app/assets/stylesheets/redesign/pages/pdp/_pdp.scss
@@ -143,6 +143,14 @@
 
   }
 
+  .pdp-panel-side-right {
+
+    .panel-side-wrap {
+      height: 100vh;
+    }
+
+  }
+
   .btn-wrap .price {
     font-weight: 600;
   }
